<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"  
  	android:focusableInTouchMode="true"
    android:background="@color/color_white"
    android:orientation="vertical" >

    
    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/baby_info_activity_icon_container_height" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/baby_info_activity_icon_height"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/baby_info_activity_icon_margin_left"
            android:src="@drawable/baby_info_sex_ico" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/baby_info_activity_icon_height"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/baby_info_activity_baby_sex"
            android:textSize="@dimen/baby_info_activity_title_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/baby_info_activity_boy_textview"
            android:layout_width="@dimen/baby_info_activity_sex_textview_width"
            android:layout_height="@dimen/baby_info_activity_sex_textview_height"
            android:layout_marginLeft="@dimen/baby_info_activity_icon_margin_left"
            android:background="@drawable/baby_info_activity_textview_select_corner"
            android:gravity="center"
            android:text="@string/baby_info_activity_baby_sex_boy"
            android:textColor="@color/baby_info_activity_select_sex_color" />

        <TextView
            android:id="@+id/baby_info_activity_girl_textview"
            android:layout_width="@dimen/baby_info_activity_sex_textview_width"
            android:layout_height="@dimen/baby_info_activity_sex_textview_height"
            android:layout_marginLeft="@dimen/baby_info_activity_icon_margin_left"
            android:background="@drawable/baby_info_activity_textview_noselect_corner"
            android:gravity="center"
            android:text="@string/baby_info_activity_baby_sex_girl"
            android:textColor="@color/baby_info_activity_noselect_sex_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/baby_info_activity_icon_container_height"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/baby_info_activity_icon_height"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/baby_info_activity_icon_margin_left"
            android:src="@drawable/baby_info_date_ico" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/baby_info_activity_icon_height"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/baby_info_activity_baby_date"
            android:textSize="@dimen/baby_info_activity_title_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="@dimen/baby_info_activity_icon_margin_left"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/baby_info_activity_choose_date_textview"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/baby_info_activity_textview_height"
                android:layout_centerInParent="true"
                android:background="@drawable/baby_info_activity_textview_corner"
                android:gravity="center"
                android:text="@string/baby_info_activity_baby_date_hint_text"
                android:textSize="@dimen/baby_info_activity_textview_text_size" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="@dimen/baby_info_activity_icon_margin_left"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/baby_info_activity_icon_container_height"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/baby_info_activity_icon_height"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/baby_info_activity_icon_margin_left"
            android:src="@drawable/baby_info_name_ico" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/baby_info_activity_icon_height"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/baby_info_activity_baby_name"
            android:textSize="@dimen/baby_info_activity_title_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="@dimen/baby_info_activity_icon_margin_left"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/baby_info_activity_choose_name_textview"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/baby_info_activity_textview_height"
                android:layout_centerInParent="true"
                android:background="@drawable/baby_info_activity_textview_corner"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/baby_info_activity_baby_name_hint_text"
                android:textSize="@dimen/baby_info_activity_textview_text_size" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="@dimen/baby_info_activity_icon_margin_left"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/baby_info_activity_save_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/baby_info_activity_button_margin_bottom"
            android:src="@drawable/first_launch_finish_ico" />

    </RelativeLayout>

</LinearLayout>
