<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="@dimen/main_title_height"
               android:background="@drawable/temperature_amount_title_background"
              android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.11"
                    android:orientation="vertical" >
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.26" >

                    <TextView
                        android:id="@+id/temperature_milk_day_show"
                        android:layout_width="@dimen/temperature_milk_date_layout_width"
                        android:layout_height="@dimen/temperature_milk_date_layout_height"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:gravity="bottom|center_horizontal"
                        android:text="@string/temperature_milk_day_text"
                        android:textSize="@dimen/temperature_milk_date_text_size" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                     android:layout_weight="0.26" >

                    <TextView
                        android:id="@+id/temperature_milk_week_show"
                        android:layout_width="@dimen/temperature_milk_date_layout_width"
                        android:layout_height="@dimen/temperature_milk_date_layout_height"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:gravity="bottom|center_horizontal"
                        android:text="@string/temperature_milk_week_text"
                        android:textSize="@dimen/temperature_milk_date_text_size" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.26" >

                    <TextView
                        android:id="@+id/temperature_milk_month_show"
                        android:layout_width="@dimen/temperature_milk_date_layout_width"
                        android:layout_height="@dimen/temperature_milk_date_layout_height"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:gravity="bottom|center_horizontal"
                        android:text="@string/temperature_milk_month_text"
                        android:textSize="@dimen/temperature_milk_date_text_size" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.11"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/temperature_milk_time_line_layout"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/temperature_milk_time_line_height"
                android:background="@drawable/temperature_amount_time_line_background"
                android:orientation="horizontal" >
            </LinearLayout>
        </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none" >

    </android.support.v4.view.ViewPager>

</LinearLayout>
